<resources>
    <string name="app_name">Music Player</string>
    <string name="song">No songs to be played</string>
    <string name="back">|&lt;</string>
    <string name="forward">&gt;|</string>
    <string name="pause">&gt;</string>
    <string name="cover">Song Cover</string>
    <string name="empty">There are no songs to be played</string>
    <string name="add"> Add songs…</string>
    <string name="name">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="date">Date</string>
    <string name="drawer">Menu</string>
    <string name="list">Lists</string>
    <string name="search">Search</string>
    <string name="down">Download</string>
    <string name="ex_down">Can\'t download file</string>
    <string name="ex_url">Not a valid url</string>
    <string name="ex_file">Not a music file</string>
    <string name="time">00:00</string>
    <string name="songs">songs</string>
    <string name="order">Order by:</string>
    <string name="group">Group by:</string>
    <string name="add_list">Add/Remove from list</string>
    <string name="rem_list">Remove from list</string>
    <string name="edit">Edit information</string>
    <string name="int_search">Introduce terms to search</string>
    <string name="cancel">Cancel</string>
    <string name="int_down">Introduce url to download</string>
    <string name="no_found">Nothing found</string>
    <string name="edit_btn">Edit</string>
    <string name="new_list">Create new list</string>
    <string name="create_list">Introduce name of list</string>
    <string name="create">Create</string>
    <string name="ex_list">List already exists</string>
    <string name="add_title">Select a list</string>
    <string name="ex_add">Song alerady on list</string>
    <string name="delete">Delete list</string>
    <string name="toast_count">Reading files</string>
    <string name="of">of</string>
</resources>