<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu1"
        android:title="@string/name"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu2"
        android:title="@string/date"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu3"
        android:title="@string/artist"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu4"
        android:title="@string/album"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu5"
        android:title="@string/add"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu6"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu7"
        android:title="@string/list"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu8"
        android:title="@string/down"
        app:showAsAction="never" />
</menu>