<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".Reproductor">


    <ImageView
        android:id="@+id/cover"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cover"
        android:src="@drawable/default_img"
        android:layout_weight="0.1" />

    <LinearLayout
        android:id="@+id/custom_menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="10"
        android:weightSum="1">

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_weight="0.1"
        android:text="@string/song" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_weight="0.1"
        android:text="@string/song" />

    <TextView
        android:id="@+id/time1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_weight="0.1"
        android:text="@string/time" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:max="1000"
        android:progressTint="@color/purple_200"
        android:layout_weight="0.1"
        android:thumbTint="@color/purple_200" />

    </LinearLayout>


</LinearLayout>