<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReproductorActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:minWidth="0dp"
        android:paddingStart="5dp"
        android:onClick="onBackClick"
        app:icon="@drawable/anterior"
        app:iconSize="15dp"
        android:paddingEnd="10dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_alignParentStart="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:minWidth="0dp"
        android:paddingStart="10dp"
        android:onClick="onMoreCLick"
        app:icon="@drawable/dots"
        app:iconSize="15dp"
        android:paddingEnd="5dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/cover"
        android:src="@drawable/default_img"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/text_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/song"
        android:layout_below="@id/cover"/>

    <SeekBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:max="1000"
        android:progressTint="@color/purple_200"
        android:thumbTint="@color/purple_200"
        android:layout_below="@id/text_activity"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:text="@string/time"
        android:layout_below="@id/text_activity"
        android:layout_toStartOf="@id/progress" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_activity"
        android:text="@string/time"
        android:layout_toEndOf="@id/progress" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_marginEnd="3dp"
        android:minWidth="0dp"
        android:onClick="onButtonBack"
        app:icon="@drawable/atras"
        app:iconSize="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:layout_toStartOf="@id/btn_pause"
        android:layout_below="@id/progress"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:minWidth="0dp"
        android:paddingStart="30dp"
        android:onClick="onButtonPause"
        app:icon="@drawable/play"
        app:iconSize="15dp"
        android:paddingEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/progress"/>

    <Button
        android:id="@+id/btn_forw"
        android:layout_width="wrap_content"
        android:minWidth="0dp"
        android:onClick="onButtonForw"
        app:icon="@drawable/proximo"
        app:iconSize="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="3dp"
        android:layout_toRightOf="@id/btn_pause"
        android:layout_below="@id/progress"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_loop"
        android:layout_width="wrap_content"
        android:minWidth="0dp"
        android:onClick="onButtonLoop"
        app:icon="@drawable/repeticion"
        app:iconSize="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/btn_forw"
        android:layout_below="@id/progress"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_random"
        android:layout_width="wrap_content"
        android:minWidth="0dp"
        android:onClick="onButtonRandom"
        app:icon="@drawable/random"
        app:iconSize="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:layout_toLeftOf="@id/btn_back"
        android:layout_below="@id/progress"
        android:layout_height="wrap_content" />

</RelativeLayout>